--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-requests==2.28.2
-beautifulsoup4==4.12.2
-python-telegram-bot==13.7
-APScheduler==3.9.1
+requests
+beautifulsoup4
+python-telegram-bot
+APScheduler
